Migrate project to junit5 and Gradle7